Finished CS Course page.

--- a/courses/cs/index.html
+++ b/courses/cs/index.html
@@ -8,7 +8,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="../../css/styles.css" rel="stylesheet">
         <style>
-
+            .nav-tabs {
+                --bs-nav-tabs-link-active-bg: #a4a4af !important;
+            }
+            .nav {
+                --bs-nav-link-color: var(--bs-black) !important;
+                --bs-nav-link-hover-color: var(--bs-gray-dark) !important;
+                --bs-nav-link-disabled-color: var(--bs-secondary-color) !important;
+            }
+            .gr-container {
+                background-color: #d2d2db;
+            }
         </style>
     </head>
     <body class="container-fluid">
@@ -54,32 +64,214 @@
         <article class="container-fluid">
             <h1>Computer Science 3</h1>
             <main class="container-fluid p-2">
-                <div class="">
-                    <div class="db-container m-3 p-3">
-                        <h1>Latest Announcements</h1>
-                        <p class="fs-4">(No announcements have been posted yet.)</p>
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
+                      <button class="nav-link" id="nav-grades-tab" data-bs-toggle="tab" data-bs-target="#nav-grades" type="button" role="tab" aria-controls="nav-grades" aria-selected="false">Grades</button>  
+                      <button class="nav-link" id="nav-quarter-tab" data-bs-toggle="tab" data-bs-target="#nav-quarter" type="button" role="tab" aria-controls="nav-quarter" aria-selected="false">1st Quarter</button>  
+                      <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false" disabled>2nd Quarter</button>
+                      <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false" disabled>3rd Quarter</button>
+                      <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false" disabled>4th Quarter</button>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="db-container m-3 p-3">
-                            <h1>Timeline</h1>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="db-container m-3 p-3">
-                            <h1>Recently Accessed</h1>
-                            <div class="card p-0 m-5">
-                                    <a href="/courses/cs/">
-                                    <img src="/img/cs3.jpg" alt="" class="card-img-top">
-                                    <div class="card-body">
-                                        <p class="card-text fs-2">Computer Science 3</p>
-                                    </div>
+                  </nav>
+                  <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+                        <div class="db-container p-3">
+                            <h1 class="mb-3">General</h1>
+                            <p class="fs-5 text-center">The course employs output-based learning and focuses on client-side web development using HTML,
+                                CSS, and JavaScript. It enables the students to produce aesthetically pleasing websites, adhering to the
+                                current web standards. The course motivates students to collaborate and participate in values social issues
+                                and learn the value of teamwork to accomplish various projects. </p>
+                            <div class="text-center">
+                                <a href="../../assets/CS3.pdf" type="button" class="btn btn-light mb-4 fs-5 fw-bold">
+                                    <img src="../../img/document.svg" alt="" width="50">Course Syllabus
+                                </a> <br>
+                                <a href="#" type="button" class="btn btn-light fs-5 fw-bold">
+                                    <img src="../../img/megaphone.svg" alt="" width="50">Announcements
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="tab-pane fade" id="nav-grades" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+                        <div class="db-container p-3">
+                            <h1 class="mb-3">Grade Report</h1>
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-secondary active" aria-current="page">1st</a>
+                                <a href="#" class="btn btn-secondary disabled">2nd</a>
+                                <a href="#" class="btn btn-secondary disabled">3rd</a>
+                                <a href="#" class="btn btn-secondary disabled">4th</a>
+                              </div>
+                            <div class="row justify-content-evenly">
+                                <div class="col-sm-4 gr-container p-3 m-3 rounded-2">
+                                    <h4>Formative Assessments: 25%</h4>
+                                    <div class="table-responsive">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">Item</th>
+                                                    <th scope="col">Grade</th>
+                                                    <th scope="col">Percentage</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1Q Quiz 1</td>
+                                                    <td>3/5</td>
+                                                    <td>60%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>1Q Bonus</td>
+                                                    <td>5/5</td>
+                                                    <td>100%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 gr-container p-3 m-3 rounded-2">
+                                    <h4>Summative Assessments: 35%</h4>
+                                    <div class="table-responsive">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">Item</th>
+                                                    <th scope="col">Grade</th>
+                                                    <th scope="col">Percentage</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1Q Project: Magazine Website</td>
+                                                    <td>50/50</td>
+                                                    <td>100%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 gr-container p-3 m-3 rounded-2">
+                                    <h4>Alternative Assessments: 35%</h4>
+                                    <div class="table-responsive">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">Item</th>
+                                                    <th scope="col">Grade</th>
+                                                    <th scope="col">Percentage</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>AA1 - The Internet and Privacy</td>
+                                                    <td>10/10</td>
+                                                    <td>100%</td>
+                                                </tr>
+                                            </tbody>
+                                            <tbody>
+                                                <tr>
+                                                    <td>AA2 - My Section Schedule </td>
+                                                    <td>10/10</td>
+                                                    <td>100%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-quarter" role="tabpanel" aria-labelledby="nav-quarter-tab" tabindex="0">
+                        <div class="db-container p-3">
+                            <h1 class="mb-3">1st Quarter</h1>
+                            <div class="row justify-content-evenly">
+                                <div class="gr-container col-sm-4 p-3 m-1 rounded-2">
+                                    <h5>Course Materials</h5>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/folder.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Learning Guides</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Folder</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/folder.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Slides</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Folder</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/folder.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Sample Code</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Folder</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="gr-container col-sm-4 p-3 m-1 rounded-2">
+                                    <h5>Quizzes (FA)</h5>
+                                    <a href="./quiz.html">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/exclamation.svg" class="mx-1" alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Quiz 1</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Quiz - ATTEMPT NOW!</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/checkmark.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Bonus</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Quiz</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="gr-container col-sm-4 p-3 m-1 rounded-2">
+                                    <h5>Lab Exercises (AA)</h5>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/checkmark.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">AA1 - The Internet and Privacy</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Submission Bin</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/checkmark.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">AA2 - My Section Schedule </h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Submission Bin</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="gr-container col-sm-4 p-3 m-1 rounded-2">
+                                    <h5>Project (SA)</h5>
+                                    <a href="#">
+                                        <div class="d-flex border border-secondary rounded p-1 my-2">
+                                            <img src="../../img/checkmark.svg" class="mx-1"alt="" width="40" height="40">
+                                            <div class="flex-column">
+                                                <h6 class="card-subtitle mb-1">1Q Project: Magazine Website</h6>
+                                                <h6 class="card-subtitle mb-1 text-muted">Submission Bin</h6>  
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
             </main>
         </article>
         <script src="../../login.js"></script>
