--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
                     <div class="col-sm-6">
                         <div class="db-container m-3 p-3">
                             <h1>Timeline</h1>
+                            <img src="./img/clipboard.svg" alt="" width="150" height="150"  class="img-fluid d-flex mx-auto">
+                            <p class="text-center">You have no activities due.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="db-container m-3 p-3">
                             <h1>Recently Accessed</h1>
                             <div class="card p-0 m-5">
-                                    <a href="/courses/cs/">
+                                    <a href="./courses/cs/">
                                     <img src="./img/cs3.jpg" alt="" class="card-img-top">
                                     <div class="card-body">
                                         <p class="card-text fs-2">Computer Science 3</p>
