--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             <img src="./img/pshs.png" alt="PSHS-CLC" class="img-fluid" width="540" height="100">
             <h1>Welcome to the PSHS-CLC Knowledge Hub!</h1>
             <form id="form" class="w-75 text-center mx-auto">
-                <input type="text" class="form-control form-control-lg mb-3" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" autocomplete="username" required>
+                <input type="text" class="form-control form-control-lg mb-3" placeholder="Username" aria-label="Username" autocomplete="username" required>
                 <input type="password" class="form-control form-control-lg mb-3" placeholder="Password" autocomplete="current-password" required>
                 <button id="signin" type="submit" class="btn btn-primary">Sign in</button>
             </form>
