--- a/authors.html
+++ b/authors.html
@@ -8,32 +8,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="./css/styles.css" rel="stylesheet">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
-
-            body {
-                background-color: #f2efeb;
-                padding: 0 !important;
-                font-family: 'Montserrat', sans-serif;
-            }
-            nav {
-                background-color: #d2d2db ;
-                font-size: 20px;
-                font-weight: 500;
-            }
-            /* Start for Dashboard only */
-            
-            .card {
-                background-color: #342940 !important;
-                color: white;
-            }
-            #welcome {
-                color: #737373;
-            }
-            @media only screen and (max-width: 768px) {
-                .navbar-brand {
-                    display: none;
-                }
-            } 
         </style>
     </head>
     <body class="container-fluid">
@@ -67,42 +41,53 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="./">Home</a>
+                            <a class="nav-link" href="./">Home</a>
                             <a class="nav-link" href="./courses.html">My Courses</a>
-                            <a class="nav-link" href="./authors.html">Authors</a>
+                            <a class="nav-link active" aria-current="page" href="./authors.html">Authors</a>
                         </div>
                     </div>
                 </div>
             </nav>
         </header>
-        <div class="container-fluid">
-            <h1 id="welcome">Welcome back, Student!</h1>
+        <div class="container-fluid mt-3">
             <main class="container-fluid p-2">
-                <div class="">
-                    <div class="db-container m-3 p-3">
-                        <h1>Latest Announcements</h1>
-                        <p class="fs-4">(No announcements have been posted yet.)</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="db-container m-3 p-3">
-                            <h1>Timeline</h1>
-                            <img src="./img/clipboard.svg" alt="" width="150" height="150"  class="img-fluid d-flex mx-auto">
-                            <p class="text-center">You have no activities due.</p>
+                <div class="db-container m-3 p-3 text-center">
+                    <h1>Authors' Page</h1>
+                    <h5>Group 1: 9 - Samat</h5>
+                    <div class="row justify-content-evenly">
+                        <div class="col-sm-4">
+                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <p class="fs-4 m-0">Julian Nite M. Yu</p>
+                            <p>Group Member</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <p class="fs-4 m-0">Julia Arista B. Mustard</p>
+                            <p>Group Member</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <p class="fs-4 m-0">Jashley Angel A. Serdoncillo</p>
+                            <p>Group Member</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <p class="fs-4 m-0">Alvin Gabriel L. Soriano</p>
+                            <p>Group Member</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <p class="fs-4 m-0">Johanna Patrice F. Loresca  </p>
+                            <p>Group Member</p>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="db-container m-3 p-3">
-                            <h1>Recently Accessed</h1>
-                            <div class="card p-0 m-5">
-                                    <a href="./courses/cs/">
-                                    <img src="./img/cs3.jpg" alt="" class="card-img-top">
-                                    <div class="card-body">
-                                        <p class="card-text fs-2">Computer Science 3</p>
-                                    </div>
-                                </a>
-                            </div>
+                    <div class="container-fluid">
+                        <h2>Citations</h2>
+                        <div class="text-start">
+                            <p>Kozel, A. (2019, May 13). Bakalari - desktop schedule. Dribbble. https://dribbble.com/shots/6458970-Bakalari-Desktop-Schedule</p>
+                            <p>Osowski, T. & Dodonut. (2021, March 30). Forum dedicated to university community. Dribbble. https://dribbble.com/shots/15385888-Forum-dedicated-to-University-Community</p>
+                            <p>School grades designs, themes, templates and downloadable graphic elements on Dribbble. (n.d.). Dribble. https://dribbble.com/tags/school_grades</p>
+                            <p>Ujkani, S. (2021, January 8). Challenge Overview. Dribbble. https://dribbble.com/shots/14896607-Challenge-Overview</p>
                         </div>
                     </div>
                 </div>
