--- a/courses.html
+++ b/courses.html
@@ -52,7 +52,7 @@
                 </div>
             </nav>
         </header>
-        <article class="container-fluid">
+        <div class="container-fluid">
             <h1 class="my-2">Course Overview</h1>
             <main>
                 <div class="row">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 p-2">
-                        <a href="/courses/cs/">
+                        <a href="./courses/cs/">
                             <div class="card p-0 m-3">
                                 <h1 class="card-header">Computer Science 3</h1>
                                 <div class="card-body">
@@ -312,7 +312,7 @@
                     </div>
                 </div>
             </main>
-        </article>
+        </div>
         <script src="./login.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
